--- a/src/app/components/user/sidebar/perfil/datos-personales/datos-personales.component.html
+++ b/src/app/components/user/sidebar/perfil/datos-personales/datos-personales.component.html
@@ -1,1 +1,96 @@
-<p>datos-personales works!</p>
+<mat-grid-list cols="7" rowHeight="3:1" class="post">
+    <mat-grid-tile colspan="1">
+        <img mat-card-image src="/assets/img/badge1.png" alt="Foto de perfil" style="height: 90%;">
+    </mat-grid-tile>
+
+    <mat-grid-tile>
+        Usuario:
+    </mat-grid-tile>
+    <mat-grid-tile colspan="2">
+        <p>{{ infoUsuario.usuario }}</p>
+    </mat-grid-tile>
+
+    <mat-grid-tile>
+        Correo:
+    </mat-grid-tile>
+    <mat-grid-tile colspan="2">
+        <p>{{ infoUsuario.correo }}</p>
+    </mat-grid-tile>
+
+    <mat-grid-tile colspan="1" rowspan="4">
+        <img mat-card-image src="/assets/img/badge1.png" alt="Foto de perfil" style="width: 90%;">
+    </mat-grid-tile>
+
+    <mat-grid-tile>
+        Nombre:
+    </mat-grid-tile>
+    <mat-grid-tile colspan="2">
+        <p>{{ infoUsuario.nombre }}</p>
+    </mat-grid-tile>
+    <mat-grid-tile>
+        Sexo:
+    </mat-grid-tile>
+    <mat-grid-tile colspan="2">
+        <p>{{ infoUsuario.sexo }}</p>
+    </mat-grid-tile>
+
+    <mat-grid-tile>
+        Apellidos:
+    </mat-grid-tile>
+    <mat-grid-tile colspan="2">
+        <p>{{ infoUsuario.apellidos }}</p>
+    </mat-grid-tile>
+    <mat-grid-tile>
+        Piso:
+    </mat-grid-tile>
+    <mat-grid-tile colspan="2">
+        <p>{{ infoUsuario.piso }}</p>
+    </mat-grid-tile>
+
+    <mat-grid-tile>
+        Edad:
+    </mat-grid-tile>
+    <mat-grid-tile colspan="2">
+        <p>{{ infoUsuario.edad }}</p>
+    </mat-grid-tile>
+    <mat-grid-tile>
+        Ciudad:
+    </mat-grid-tile>
+    <mat-grid-tile colspan="2">
+        <p>{{ infoUsuario.ciudad }}</p>
+    </mat-grid-tile>
+
+    <mat-grid-tile>
+        Reputación:
+    </mat-grid-tile>
+    <mat-grid-tile colspan="2">
+        <p>{{ infoUsuario.reputacion }}</p>
+    </mat-grid-tile>
+    <mat-grid-tile>
+        Situación:
+    </mat-grid-tile>
+    <mat-grid-tile colspan="2">
+        <p>{{ infoUsuario.situacion }}</p>
+    </mat-grid-tile>
+</mat-grid-list>
+
+<div class="estampas">
+    <h1>• Seleccione las estampas que desea que se muestren en su perfil</h1>
+
+    <mat-grid-list cols="2" rowHeight="4:1">
+        <mat-grid-tile *ngFor="let estampa of infoUsuario.estampas">
+            <mat-card class="post" [style.background-color]="estampa.color">
+                <mat-card-header>
+                    <mat-card-title-group>
+                        <mat-card-title style="color: white;">
+                            <img mat-card-image src="{{ estampa.foto }}" alt="Foto de perfil" style="width: 10%;">
+                            {{ estampa.titulo }}
+                        </mat-card-title>
+                        <mat-card-subtitle style="color: white;">{{ estampa.descripcion }}</mat-card-subtitle>
+                    </mat-card-title-group>
+                </mat-card-header>
+                <mat-card-content style="color: white;">{{ estampa.nota }}</mat-card-content>
+            </mat-card>
+        </mat-grid-tile>
+    </mat-grid-list>
+</div>
