--- a/src/app/components/user/sidebar/faq/faq.component.html
+++ b/src/app/components/user/sidebar/faq/faq.component.html
@@ -15,10 +15,10 @@
             <mat-expansion-panel *ngFor="let item of preguntasFrecuentes">
               <mat-expansion-panel-header>
                 <mat-panel-title>
-                  {{ item.pregunta }}
+                  {{ item.titulo }}
                 </mat-panel-title>
               </mat-expansion-panel-header>
-              <p>{{ item.respuesta }}</p>
+              <p>{{ item.descripcion }}</p>
             </mat-expansion-panel>
           </mat-accordion>          
     </div>
