Cambio en las pantallas de administrador

--- a/src/app/components/admin/sidebar/contact-us-de-usuario/contact-us-de-usuario.component.html
+++ b/src/app/components/admin/sidebar/contact-us-de-usuario/contact-us-de-usuario.component.html
@@ -5,38 +5,51 @@
   envían a la administración, permitiendo a la administración responder o rechazar dichos mensajes.
   Cuenta con un dropdown para seleccionar el tipo de mensaje que se desea visualizar.
 -->
-<mat-grid-list cols="5" rowHeight="2:1">
-  <mat-grid-tile colspan="3">
-    <mat-form-field style="width: 100%;">
+<div class="fijo">
+  <mat-grid-list cols="11" rowHeight="2:1">
+    <mat-grid-tile colspan="1"><mat-icon style="margin-top: 15%;"
+        (click)="goBack()">arrow_back_ios</mat-icon></mat-grid-tile>
+    <mat-grid-tile colspan="9">
+      <h1 class="title" style="margin-top: 3%;">CONTACT US DE USUARIO</h1>
+    </mat-grid-tile>
+  </mat-grid-list>
+
+  <hr class="linea-title">
+</div>
+
+<div class="desplazable">
+  <mat-grid-list cols="5" rowHeight="2:1">
+    <mat-grid-tile colspan="3">
+      <mat-form-field style="width: 100%;">
         <mat-label>Selección</mat-label>
         <mat-select>
-            <mat-option value="queja">Queja</mat-option>
-            <mat-option value="sugerencia">Sugerencia</mat-option>
-            <mat-option value="otros">Otros</mat-option>
+          <mat-option value="queja">Queja</mat-option>
+          <mat-option value="sugerencia">Sugerencia</mat-option>
+          <mat-option value="otros">Otros</mat-option>
         </mat-select>
-    </mat-form-field>
-  </mat-grid-tile>
-</mat-grid-list>  
-<router-outlet></router-outlet>
+      </mat-form-field>
+    </mat-grid-tile>
+  </mat-grid-list>
+  <router-outlet></router-outlet>
 
-<mat-grid-list cols="2" rowHeight="2:1" style="margin-top: 5px;">
+  <mat-grid-list cols="2" rowHeight="2:1" style="margin-top: 5px;">
     <ng-container *ngFor="let contact of contacts" style="margin-top: 20%;">
       <div class="container"> <!-- Wrap each set of elements -->
         <mat-grid-tile class="post" style="width: 1124px; height: 0px; margin-top: 10%;">
-            <div>
-              <img mat-card-image src="/assets/img/badge1.png" class="icon">
-            </div>
-            <div style="display: inline-grid">
-                <mat-card-content class="post-title">{{ contact.usuario }}</mat-card-content>
-                <mat-card-content class="post-text" style="margin-top: 10px;">{{ contact.tipo }}</mat-card-content>
-                <mat-card-content class="post-text" style="margin-top: 10px;">{{ contact.info }}</mat-card-content>
-            </div>
-            <div>
-              <button mat-raised-button style="margin-top: 180px; margin-left: 50px;" color="primary">Responder</button>
-              <button mat-raised-button style="margin-top: 180px;" color="warn">Rechazar</button>
-            </div>
+          <div>
+            <img mat-card-image src="/assets/img/badge1.png" class="icon">
+          </div>
+          <div style="display: inline-grid">
+            <mat-card-content class="post-title">{{ contact.usuario }}</mat-card-content>
+            <mat-card-content class="post-text" style="margin-top: 10px;">{{ contact.tipo }}</mat-card-content>
+            <mat-card-content class="post-text" style="margin-top: 10px;">{{ contact.info }}</mat-card-content>
+          </div>
+          <div>
+            <button mat-raised-button style="margin-top: 180px; margin-left: 50px;" color="primary">Responder</button>
+            <button mat-raised-button style="margin-top: 180px;" color="warn">Rechazar</button>
+          </div>
         </mat-grid-tile>
       </div>
     </ng-container>
-</mat-grid-list>
-  
+  </mat-grid-list>
+</div>
