--- a/src/app/components/admin/sidebar/estadisticas/estadisticas.component.html
+++ b/src/app/components/admin/sidebar/estadisticas/estadisticas.component.html
@@ -1,1 +1,15 @@
-<p>This page is a work in progress</p>
+<div class="fijo">
+    <mat-grid-list cols="11" rowHeight="2:1">
+        <mat-grid-tile colspan="1"><mat-icon style="margin-top: 15%;"
+                (click)="goBack()">arrow_back_ios</mat-icon></mat-grid-tile>
+        <mat-grid-tile colspan="9">
+            <h1 class="title" style="margin-top: 3%;">ESTADÍSTICAS</h1>
+        </mat-grid-tile>
+    </mat-grid-list>
+
+    <hr class="linea-title">
+</div>
+
+<div class="desplazable">
+    <p>This page is a work in progress</p>
+</div>
