--- a/src/app/components/admin/sidebar/gestion-de-usuarios/gestion-de-usuarios.component.css
+++ b/src/app/components/admin/sidebar/gestion-de-usuarios/gestion-de-usuarios.component.css
@@ -1,3 +1,25 @@
+/* .fijo {} */
+
+.desplazable {
+    margin-left: 5%;
+    margin-right: 5%;
+}
+
+.title {
+    text-align: center;
+    margin-top: 1%;
+    color: #434982;
+    font-size: 210%;
+}
+
+.linea-title {
+    border: none;
+    height: 10px;
+    background: linear-gradient(251.18deg, #730068 28.25%, #434982 37.09%, #434982 56.69%, #01D28E 65.98%);
+    width: 100%;
+    margin: 20px 0;
+}
+
 .post-denuncia {
     display: inline-flex;
     width: 827px;
