--- a/src/app/components/admin/sidebar/sidebar.component.html
+++ b/src/app/components/admin/sidebar/sidebar.component.html
@@ -30,39 +30,43 @@
             <mat-grid-tile colspan="2"><mat-icon color="accent" (click)="sidenav.close()" (click)="sidenav1.open()"
                     (click)="toggle()">menu</mat-icon></mat-grid-tile>
             <mat-grid-tile colspan="3"></mat-grid-tile>
-            <mat-grid-tile colspan="2"><mat-icon color="accent" routerLink="/sidebar/notificaciones">notifications</mat-icon></mat-grid-tile>
+            <mat-grid-tile colspan="2"><mat-icon color="accent" routerLink="/admin/sidebar/notificaciones">notifications</mat-icon></mat-grid-tile>
 
-            <mat-grid-tile colspan="7">
-                <p class="opcion-text">foto perfil</p>
+            <mat-grid-tile colspan="7" rowspan="2" routerLink="/admin/sidebar/perfil">
+                <img mat-sm-image src="./assets/img/badge1.png" alt="Foto de perfil" style="height: 90%;">
             </mat-grid-tile>
 
-            <mat-grid-tile colspan="1" routerLink="/admin/sidebar/contact-us-de-usuario"><mat-icon color="accent">place</mat-icon></mat-grid-tile>
+            <mat-grid-tile colspan="7" rowspan="1">
+                <p class="usuario">Administrador</p>
+                <!-- <img mat-sm-image class="insignia" src="./assets/img/badge1.png" alt="Foto de perfil">
+                <img mat-sm-image class="insignia" src="./assets/img/badge1.png" alt="Foto de perfil">
+                <img mat-sm-image class="insignia" src="./assets/img/badge1.png" alt="Foto de perfil">
+                <p class="reputacion">Reputación: 256</p> -->
+            </mat-grid-tile>
+
+            <mat-grid-tile colspan="1" routerLink="/admin/sidebar/contact-us-de-usuario"><mat-icon color="accent">forum</mat-icon></mat-grid-tile>
             <mat-grid-tile colspan="6" mat-align="start" routerLink="/admin/sidebar/contact-us-de-usuario">
                 <p class="opcion-text">Contact us de usuario</p>
             </mat-grid-tile>
 
-            <mat-grid-tile colspan="1"></mat-grid-tile>
-            <mat-grid-tile colspan="1" routerLink="/admin/sidebar/denuncias-del-foro"><mat-icon color="accent">home</mat-icon></mat-grid-tile>
-            <mat-grid-tile colspan="5" mat-align="start" routerLink="/admin/sidebar/denuncias-del-foro">
+            <mat-grid-tile colspan="1" routerLink="/admin/sidebar/denuncias-del-foro"><mat-icon color="accent">warning</mat-icon></mat-grid-tile>
+            <mat-grid-tile colspan="6" mat-align="start" routerLink="/admin/sidebar/denuncias-del-foro">
                 <p class="opcion-text">Denuncias del foro</p>
             </mat-grid-tile>
 
-            <mat-grid-tile colspan="1"></mat-grid-tile>
-            <mat-grid-tile colspan="1" routerLink="/admin/sidebar/gestion-de-usuarios"><mat-icon color="accent">map</mat-icon></mat-grid-tile>
-            <mat-grid-tile colspan="5" mat-align="start" routerLink="/admin/sidebar/gestion-de-usuarios">
+            <mat-grid-tile colspan="1" routerLink="/admin/sidebar/gestion-de-usuarios"><mat-icon color="accent">supervisor_account</mat-icon></mat-grid-tile>
+            <mat-grid-tile colspan="6" mat-align="start" routerLink="/admin/sidebar/gestion-de-usuarios">
                 <p class="opcion-text">Gestión de usuarios</p>
             </mat-grid-tile>
 
-            <mat-grid-tile colspan="1" routerLink="/admin/sidebar/estadisticas"><mat-icon color="accent">flag</mat-icon></mat-grid-tile>
+            <mat-grid-tile colspan="1" routerLink="/admin/sidebar/estadisticas"><mat-icon color="accent">bar_chart</mat-icon></mat-grid-tile>
             <mat-grid-tile colspan="6" mat-align="left" routerLink="/admin/sidebar/estadisticas">
                 <p class="opcion-text">Estadísticas</p>
             </mat-grid-tile>
 
-            <mat-grid-tile colspan="7"></mat-grid-tile>
-            <mat-grid-tile colspan="7"></mat-grid-tile>
-            <mat-grid-tile colspan="7"></mat-grid-tile>
+            <mat-grid-tile colspan="7" rowspan="3"></mat-grid-tile>
 
-            <mat-grid-tile colspan="1"><mat-icon color="accent">logout</mat-icon></mat-grid-tile>
+            <mat-grid-tile colspan="1" routerLink=""><mat-icon color="accent">logout</mat-icon></mat-grid-tile>
             <mat-grid-tile colspan="6">
                 <p class="opcion-text">Cerrar sesión</p>
             </mat-grid-tile>
