--- a/src/app/components/user/sidebar/foro/anadir-post/anadir-post.component.html
+++ b/src/app/components/user/sidebar/foro/anadir-post/anadir-post.component.html
@@ -2,15 +2,15 @@
     <h1 class="title">Añadir una nueva conversación al foro</h1>
     <form class="example-form">
         <mat-form-field class="example-full-width">
-            <input matInput placeholder="Título de la conversación">
+            <input matInput placeholder="Título de la conversación" [(ngModel)]="titulo" name="titulo">
         </mat-form-field>
 
         <mat-form-field class="example-full-width">
-            <textarea matInput placeholder="Mensaje"></textarea>
+            <textarea matInput placeholder="Mensaje" [(ngModel)]="mensaje" name="mensaje"></textarea>
         </mat-form-field>
     </form>
 </mat-dialog-content>
 <mat-dialog-actions align="center">
     <button mat-flat-button color="warn" style="margin-right: 3%;" [mat-dialog-close]="true">Cancelar</button>
-    <button mat-flat-button (click)="anadir()">Aceptar</button>
+    <button mat-flat-button color="primary" (click)="anadir()">Aceptar</button>
 </mat-dialog-actions>
