--- a/src/app/components/user/sidebar/foro/posts/companero-piso/companero-piso.component.html
+++ b/src/app/components/user/sidebar/foro/posts/companero-piso/companero-piso.component.html
@@ -10,7 +10,7 @@
                     <mat-card-subtitle style="color: white;">{{ post.title }}</mat-card-subtitle>
                 </mat-card-title-group>
             </mat-card-header>
-            <mat-card-content style="color: white;" (click)="navigateToConversacion()">{{ post.description
+            <mat-card-content style="color: white;" (click)="navigateToConversacion()" class="post-content">{{ post.description
                 }}</mat-card-content>
             <mat-card-actions align="end">
                 <mat-icon style="color: white;">favorite</mat-icon>
