--- a/src/app/components/user/sidebar/foro/posts/recetas/recetas.component.css
+++ b/src/app/components/user/sidebar/foro/posts/recetas/recetas.component.css
@@ -12,3 +12,10 @@
     background: rgba(67, 73, 130, 0.8);
     border-radius: 10px;
 }
+
+.post-content {
+    overflow: hidden;
+    display: -webkit-box;
+    -webkit-box-orient: vertical;
+    -webkit-line-clamp: 4;
+}
