--- a/src/app/components/user/sidebar/foro/posts/recetas/recetas.component.html
+++ b/src/app/components/user/sidebar/foro/posts/recetas/recetas.component.html
@@ -10,7 +10,7 @@
                     <mat-card-subtitle style="color: white;">{{ post.title }}</mat-card-subtitle>
                 </mat-card-title-group>
             </mat-card-header>
-            <mat-card-content style="color: white;">{{ post.description }}</mat-card-content>
+            <mat-card-content style="color: white;" class="post-content">{{ post.description }}</mat-card-content>
             <mat-card-actions align="end">
                 <mat-icon style="color: white;">favorite</mat-icon>
                 <mat-icon style="color: white;">bookmark</mat-icon>
