Modificaciones del html de admin y prueba exitosa de paginador en una de las pantallas

--- a/src/app/components/admin/sidebar/gestion-de-usuarios/gestion-de-usuarios.component.html
+++ b/src/app/components/admin/sidebar/gestion-de-usuarios/gestion-de-usuarios.component.html
@@ -21,7 +21,7 @@
 
 <div class="desplazable">
     <mat-grid-list cols="6" rowHeight="2:1">
-        <mat-grid-tile colspan="1">
+        <mat-grid-tile colspan="1" (click)="buscar()">
             <mat-icon>search</mat-icon>
         </mat-grid-tile>
         <mat-grid-tile colspan="4">
