--- a/src/app/components/user/sidebar/buscar-piso/lista/lista.component.html
+++ b/src/app/components/user/sidebar/buscar-piso/lista/lista.component.html
@@ -6,12 +6,13 @@
           <mat-card-title style="color: white;">{{ tarjeta.piso }}</mat-card-title>
           <mat-card-subtitle style="color: white;">{{ tarjeta.direccion }}</mat-card-subtitle>
         </mat-card-title-group>
-        <img mat-card-image src="/assets/img/badge1.png" alt="Foto de perfil"
-          style="width: 15%; margin-top: 2%; margin-left: 2%">
+        <!-- <img mat-card-image src="/assets/img/badge1.png" alt="Foto de perfil"
+          style="width: 15%; margin-top: 2%; margin-left: 2%"> -->
+        <img mat-card-image [src]=tarjeta.img alt="Foto de perfil" style="width: 15%; margin-top: 2%; margin-left: 2%">
       </mat-card-header>
-      <!-- <mat-card-content style="color: white; overflow: hidden; white-space: nowrap; text-overflow: ellipsis;">{{ tarjeta.descripcion }}</mat-card-content>-->
-      <mat-card-content class="post-content" style="color: white;">{{tarjeta.descripcion
-        }}</mat-card-content>
+      <mat-card-content class="post-content" style="color: white;">
+        {{tarjeta.descripcion }}
+      </mat-card-content>
       <mat-card-actions align="end">
         <mat-card-title style="color: white;">{{ tarjeta.precio }}</mat-card-title>
       </mat-card-actions>
