--- a/src/app/components/user/sidebar/buscar-piso/buscar-piso.component.html
+++ b/src/app/components/user/sidebar/buscar-piso/buscar-piso.component.html
@@ -8,5 +8,17 @@
 </div>
 
 <div class="desplazable">
+    <mat-grid-list cols="6" rowHeight="2:1">
+        <mat-grid-tile colspan="1" (click)="buscar()">
+            <mat-icon>search</mat-icon>
+        </mat-grid-tile>
+        <mat-grid-tile colspan="4">
+            <mat-form-field class="example-form-field">
+                <mat-label>Clearable input</mat-label>
+                <input matInput type="text" [(ngModel)]="value">
+            </mat-form-field>
+        </mat-grid-tile>
+    </mat-grid-list>
+
     <router-outlet></router-outlet>
 </div>
