--- a/src/app/components/user/sidebar/foro/posts/companero-piso/companero-piso.component.html
+++ b/src/app/components/user/sidebar/foro/posts/companero-piso/companero-piso.component.html
@@ -1,5 +1,5 @@
 <mat-grid-list cols="2" rowHeight="2.5:1">
-    <mat-grid-tile *ngFor="let post of posts">
+    <mat-grid-tile *ngFor="let post of posts | slice: lowValue : highValue">
         <mat-card class="post">
             <mat-card-header (click)="navigateToConversacion()">
                 <mat-card-title-group>
@@ -20,3 +20,5 @@
         </mat-card>
     </mat-grid-tile>
 </mat-grid-list>
+
+<mat-paginator [length]="posts.length" [pageSize]="pageSize" (page)="getPaginatorData($event)"></mat-paginator>
