--- a/src/app/components/user/sidebar/buscar-piso/buscar-piso.component.html
+++ b/src/app/components/user/sidebar/buscar-piso/buscar-piso.component.html
@@ -14,7 +14,7 @@
         </mat-grid-tile>
         <mat-grid-tile colspan="4">
             <mat-form-field class="example-form-field">
-                <mat-label>Clearable input</mat-label>
+                <mat-label>Buscar</mat-label>
                 <input matInput type="text" [(ngModel)]="value">
             </mat-form-field>
         </mat-grid-tile>
