--- a/src/app/components/user/sidebar/contact-us/contact-us.component.html
+++ b/src/app/components/user/sidebar/contact-us/contact-us.component.html
@@ -29,7 +29,7 @@
             <form class="example-form">
                 <mat-form-field class="example-full-width">
                     <mat-label>Título</mat-label>
-                    <input matInput type="text" [(ngModel)]="titulo">
+                    <input matInput type="text" [(ngModel)]="titulo" name="titulo">
                 </mat-form-field>
             </form>
         </mat-grid-tile>
