--- a/src/app/components/user/sidebar/foro/conversacion/conversacion.component.html
+++ b/src/app/components/user/sidebar/foro/conversacion/conversacion.component.html
@@ -7,96 +7,21 @@
     </mat-grid-tile>
 </mat-grid-list>
 
-<mat-card class="comentario">
-    <mat-card-header>
-        <mat-card-title-group>
-            <mat-card-title style="color: white;">
-                <img mat-card-image src="/assets/img/badge1.png" alt="Foto de perfil" style="width: 3%;" (click)="openDialogUsuario('0ms', '0ms')">
-                Nombre de usuario
-            </mat-card-title>
-        </mat-card-title-group>
-    </mat-card-header>
-    <mat-card-content style="color: white;">Comentario a decir</mat-card-content>
-    <mat-card-actions align="end">
-        <mat-icon style="color: white;" (click)="openDialogResponder('0ms', '0ms')">keyboard_return</mat-icon>
-        <mat-icon style="color: white;">report_problem</mat-icon> </mat-card-actions>
-</mat-card>
-
-<mat-card class="comentario">
+<mat-card *ngFor="let mensaje of mensajes" class="comentario" [ngClass]="{'comentario-tabulado': mensaje.tabulado}">
     <mat-card-header>
         <mat-card-title-group>
             <mat-card-title style="color: white;">
                 <img mat-card-image src="/assets/img/badge1.png" alt="Foto de perfil" style="width: 3%;">
-                Nombre de usuario
+                {{ mensaje.nombreUsuario }}
             </mat-card-title>
         </mat-card-title-group>
     </mat-card-header>
-    <mat-card-content style="color: white;">Comentario a decir</mat-card-content>
-    <mat-card-actions align="end">
-        <mat-icon style="color: white;">keyboard_return</mat-icon>
-        <mat-icon style="color: white;">report_problem</mat-icon> </mat-card-actions>
-</mat-card>
-
-<mat-card class="comentario-tabulado">
-    <mat-card-header>
-        <mat-card-title-group>
-            <mat-card-title style="color: white;">
-                <img mat-card-image src="/assets/img/badge1.png" alt="Foto de perfil" style="width: 3%;">
-                Nombre de usuario
-            </mat-card-title>
-        </mat-card-title-group>
-    </mat-card-header>
-    <mat-card-content style="color: white;">Comentario a decir</mat-card-content>
-    <mat-card-actions align="end">
-        <mat-icon style="color: white;">keyboard_return</mat-icon>
-        <mat-icon style="color: white;">report_problem</mat-icon> </mat-card-actions>
-</mat-card>
-
-<mat-card class="comentario">
-    <mat-card-header>
-        <mat-card-title-group>
-            <mat-card-title style="color: white;">
-                <img mat-card-image src="/assets/img/badge1.png" alt="Foto de perfil" style="width: 3%;">
-                Nombre de usuario
-            </mat-card-title>
-        </mat-card-title-group>
-    </mat-card-header>
-    <mat-card-content style="color: white;">Comentario a decir</mat-card-content>
-    <mat-card-actions align="end">
-        <mat-icon style="color: white;">keyboard_return</mat-icon>
-        <mat-icon style="color: white;">report_problem</mat-icon> </mat-card-actions>
-</mat-card>
-
-<mat-card class="comentario">
-    <mat-card-header>
-        <mat-card-title-group>
-            <mat-card-title style="color: white;">
-                <img mat-card-image src="/assets/img/badge1.png" alt="Foto de perfil" style="width: 3%;">
-                Nombre de usuario
-            </mat-card-title>
-        </mat-card-title-group>
-    </mat-card-header>
-    <mat-card-content style="color: white;">Comentario a decir</mat-card-content>
+    <mat-card-content style="color: white;">{{ mensaje.comentario }}</mat-card-content>
     <mat-card-actions align="end">
         <mat-icon style="color: white;">keyboard_return</mat-icon>
         <mat-icon style="color: white;">report_problem</mat-icon>
     </mat-card-actions>
 </mat-card>
 
-<mat-card class="comentario-tabulado">
-    <mat-card-header>
-        <mat-card-title-group>
-            <mat-card-title style="color: white;">
-                <img mat-card-image src="/assets/img/badge1.png" alt="Foto de perfil" style="width: 3%;">
-                Nombre de usuario
-            </mat-card-title>
-        </mat-card-title-group>
-    </mat-card-header>
-    <mat-card-content style="color: white;">Comentario a decir</mat-card-content>
-    <mat-card-actions align="end">
-        <mat-icon style="color: white;">keyboard_return</mat-icon>
-        <mat-icon style="color: white;">report_problem</mat-icon>
-    </mat-card-actions>
-</mat-card>
 
 <!-- <button mat-raised-button (click)="openDialog('0ms', '0ms')">Open dialog without animation</button> -->
