--- a/src/app/components/user/sidebar/foro/posts/companero-piso/companero-piso.component.html
+++ b/src/app/components/user/sidebar/foro/posts/companero-piso/companero-piso.component.html
@@ -1,21 +1,38 @@
+<div class="barra">
+    <mat-grid-list cols="6" rowHeight="2:1">
+        <mat-grid-tile colspan="1" (click)="buscar()">
+            <mat-icon>search</mat-icon>
+        </mat-grid-tile>
+        <mat-grid-tile colspan="4">
+            <mat-form-field class="example-form-field">
+                <mat-label>Buscar</mat-label>
+                <input matInput type="text" [(ngModel)]="value">
+            </mat-form-field>
+        </mat-grid-tile>
+        <mat-grid-tile colspan="1">
+            <mat-icon (click)="openDialogAdd('0ms', '0ms', 'compagneroDePiso')">add</mat-icon>
+        </mat-grid-tile>
+    </mat-grid-list>
+</div>
+
 <mat-grid-list cols="2" rowHeight="2.5:1">
     <mat-grid-tile *ngFor="let post of posts | slice: lowValue : highValue">
         <mat-card class="post">
-            <mat-card-header (click)="navigateToConversacion()">
+            <mat-card-header>
                 <mat-card-title-group>
                     <mat-card-title style="color: white;">
                         <img mat-card-image src="/assets/img/badge1.png" alt="Foto de perfil" style="width: 10%;">
                         {{ post.userName }}
                     </mat-card-title>
-                    <mat-card-subtitle style="color: white;">{{ post.title }}</mat-card-subtitle>
+                    <mat-card-subtitle style="color: white;" (click)="navigateToConversacion(post.id)">{{ post.title }}</mat-card-subtitle>
                 </mat-card-title-group>
             </mat-card-header>
-            <mat-card-content style="color: white;" (click)="navigateToConversacion()" class="post-content">{{ post.description
+            <mat-card-content style="color: white;" (click)="navigateToConversacion(post.id)" class="post-content">{{ post.description
                 }}</mat-card-content>
             <mat-card-actions align="end">
-                <mat-icon style="color: white;">favorite</mat-icon>
-                <mat-icon style="color: white;">bookmark</mat-icon>
-                <mat-icon style="color: white;" (click)="openDialogDenuncia('0ms', '0ms')">report_problem</mat-icon>
+                <mat-icon [style.color]="post.like" (click)="darLike(post.id)">favorite</mat-icon>
+                <mat-icon [style.color]="post.fav" (click)="hacerFav(post.id)">bookmark</mat-icon>
+                <mat-icon style="color: white;" (click)="openDialogDenuncia('0ms', '0ms', post.id)">report_problem</mat-icon>
             </mat-card-actions>
         </mat-card>
     </mat-grid-tile>
