--- a/src/app/components/user/sidebar/foro/posts/guardados/guardados.component.css
+++ b/src/app/components/user/sidebar/foro/posts/guardados/guardados.component.css
@@ -7,8 +7,19 @@
     width: 100%;
 }
 
+.barra {
+    margin-top: 1%;
+}
+
 .post {
     width: 70%;
     background: rgba(67, 73, 130, 0.8);
     border-radius: 10px;
+}
+
+.post-content {
+    overflow: hidden;
+    display: -webkit-box;
+    -webkit-box-orient: vertical;
+    -webkit-line-clamp: 4;
 }
