--- a/src/app/components/user/sidebar/foro/posts/guardados/guardados.component.html
+++ b/src/app/components/user/sidebar/foro/posts/guardados/guardados.component.html
@@ -1,154 +1,38 @@
-<mat-grid-list cols="2" rowHeight="3:1">
-    <mat-grid-tile>
+<div class="barra">
+    <mat-grid-list cols="6" rowHeight="2:1">
+        <mat-grid-tile colspan="1" (click)="buscar()">
+            <mat-icon>search</mat-icon>
+        </mat-grid-tile>
+        <mat-grid-tile colspan="4">
+            <mat-form-field class="example-form-field">
+                <mat-label>Buscar</mat-label>
+                <input matInput type="text" [(ngModel)]="value">
+            </mat-form-field>
+        </mat-grid-tile>
+        <mat-grid-tile colspan="1"></mat-grid-tile>
+    </mat-grid-list>
+</div>
+
+<mat-grid-list cols="2" rowHeight="2.5:1">
+    <mat-grid-tile *ngFor="let post of posts | slice: lowValue : highValue">
         <mat-card class="post">
             <mat-card-header>
                 <mat-card-title-group>
                     <mat-card-title style="color: white;">
                         <img mat-card-image src="/assets/img/badge1.png" alt="Foto de perfil" style="width: 10%;">
-                        Nombre de usuario
+                        {{ post.userName }}
                     </mat-card-title>
-                    <mat-card-subtitle style="color: white;">Título</mat-card-subtitle>
+                    <mat-card-subtitle style="color: white;" (click)="navigateToConversacion(post.id)">{{ post.title }}</mat-card-subtitle>
                 </mat-card-title-group>
             </mat-card-header>
-            <mat-card-content style="color: white;">Descipción breve con la información a comentar</mat-card-content>
+            <mat-card-content style="color: white;" (click)="navigateToConversacion(post.id)" class="post-content">{{ post.description }}</mat-card-content>
             <mat-card-actions align="end">
-                <mat-icon style="color: white;">favorite</mat-icon>
-                <mat-icon style="color: orange;">bookmark</mat-icon>
-                <mat-icon style="color: white;">report_problem</mat-icon>
-            </mat-card-actions>
-        </mat-card>
-    </mat-grid-tile>
-    <mat-grid-tile>
-        <mat-card class="post">
-            <mat-card-header>
-                <mat-card-title-group>
-                    <mat-card-title style="color: white;">
-                        <img mat-card-image src="/assets/img/badge1.png" alt="Foto de perfil" style="width: 10%;">
-                        Nombre de usuario
-                    </mat-card-title>
-                    <mat-card-subtitle style="color: white;">Título</mat-card-subtitle>
-                </mat-card-title-group>
-            </mat-card-header>
-            <mat-card-content style="color: white;">Descipción breve con la información a comentar</mat-card-content>
-            <mat-card-actions align="end">
-                <mat-icon style="color: white;">favorite</mat-icon>
-                <mat-icon style="color: orange;">bookmark</mat-icon>
-                <mat-icon style="color: white;">report_problem</mat-icon>
-            </mat-card-actions>
-        </mat-card>
-    </mat-grid-tile>
-    <mat-grid-tile>
-        <mat-card class="post">
-            <mat-card-header>
-                <mat-card-title-group>
-                    <mat-card-title style="color: white;">
-                        <img mat-card-image src="/assets/img/badge1.png" alt="Foto de perfil" style="width: 10%;">
-                        Nombre de usuario
-                    </mat-card-title>
-                    <mat-card-subtitle style="color: white;">Título</mat-card-subtitle>
-                </mat-card-title-group>
-            </mat-card-header>
-            <mat-card-content style="color: white;">Descipción breve con la información a comentar</mat-card-content>
-            <mat-card-actions align="end">
-                <mat-icon style="color: white;">favorite</mat-icon>
-                <mat-icon style="color: orange;">bookmark</mat-icon>
-                <mat-icon style="color: white;">report_problem</mat-icon>
-            </mat-card-actions>
-        </mat-card>
-    </mat-grid-tile>
-    <mat-grid-tile>
-        <mat-card class="post">
-            <mat-card-header>
-                <mat-card-title-group>
-                    <mat-card-title style="color: white;">
-                        <img mat-card-image src="/assets/img/badge1.png" alt="Foto de perfil" style="width: 10%;">
-                        Nombre de usuario
-                    </mat-card-title>
-                    <mat-card-subtitle style="color: white;">Título</mat-card-subtitle>
-                </mat-card-title-group>
-            </mat-card-header>
-            <mat-card-content style="color: white;">Descipción breve con la información a comentar</mat-card-content>
-            <mat-card-actions align="end">
-                <mat-icon style="color: white;">favorite</mat-icon>
-                <mat-icon style="color: orange;">bookmark</mat-icon>
-                <mat-icon style="color: white;">report_problem</mat-icon>
-            </mat-card-actions>
-        </mat-card>
-    </mat-grid-tile>
-    <mat-grid-tile>
-        <mat-card class="post">
-            <mat-card-header>
-                <mat-card-title-group>
-                    <mat-card-title style="color: white;">
-                        <img mat-card-image src="/assets/img/badge1.png" alt="Foto de perfil" style="width: 10%;">
-                        Nombre de usuario
-                    </mat-card-title>
-                    <mat-card-subtitle style="color: white;">Título</mat-card-subtitle>
-                </mat-card-title-group>
-            </mat-card-header>
-            <mat-card-content style="color: white;">Descipción breve con la información a comentar</mat-card-content>
-            <mat-card-actions align="end">
-                <mat-icon style="color: white;">favorite</mat-icon>
-                <mat-icon style="color: orange;">bookmark</mat-icon>
-                <mat-icon style="color: white;">report_problem</mat-icon>
-            </mat-card-actions>
-        </mat-card>
-    </mat-grid-tile>
-    <mat-grid-tile>
-        <mat-card class="post">
-            <mat-card-header>
-                <mat-card-title-group>
-                    <mat-card-title style="color: white;">
-                        <img mat-card-image src="/assets/img/badge1.png" alt="Foto de perfil" style="width: 10%;">
-                        Nombre de usuario
-                    </mat-card-title>
-                    <mat-card-subtitle style="color: white;">Título</mat-card-subtitle>
-                </mat-card-title-group>
-            </mat-card-header>
-            <mat-card-content style="color: white;">Descipción breve con la información a comentar</mat-card-content>
-            <mat-card-actions align="end">
-                <mat-icon style="color: white;">favorite</mat-icon>
-                <mat-icon style="color: orange;">bookmark</mat-icon>
-                <mat-icon style="color: white;">report_problem</mat-icon>
-            </mat-card-actions>
-        </mat-card>
-    </mat-grid-tile>
-    <mat-grid-tile>
-        <mat-card class="post">
-            <mat-card-header>
-                <mat-card-title-group>
-                    <mat-card-title style="color: white;">
-                        <img mat-card-image src="/assets/img/badge1.png" alt="Foto de perfil" style="width: 10%;">
-                        Nombre de usuario
-                    </mat-card-title>
-                    <mat-card-subtitle style="color: white;">Título</mat-card-subtitle>
-                </mat-card-title-group>
-            </mat-card-header>
-            <mat-card-content style="color: white;">Descipción breve con la información a comentar</mat-card-content>
-            <mat-card-actions align="end">
-                <mat-icon style="color: white;">favorite</mat-icon>
-                <mat-icon style="color: orange;">bookmark</mat-icon>
-                <mat-icon style="color: white;">report_problem</mat-icon>
-            </mat-card-actions>
-        </mat-card>
-    </mat-grid-tile>
-    <mat-grid-tile>
-        <mat-card class="post">
-            <mat-card-header>
-                <mat-card-title-group>
-                    <mat-card-title style="color: white;">
-                        <img mat-card-image src="/assets/img/badge1.png" alt="Foto de perfil" style="width: 10%;">
-                        Nombre de usuario
-                    </mat-card-title>
-                    <mat-card-subtitle style="color: white;">Título</mat-card-subtitle>
-                </mat-card-title-group>
-            </mat-card-header>
-            <mat-card-content style="color: white;">Descipción breve con la información a comentar</mat-card-content>
-            <mat-card-actions align="end">
-                <mat-icon style="color: white;">favorite</mat-icon>
-                <mat-icon style="color: orange;">bookmark</mat-icon>
-                <mat-icon style="color: white;">report_problem</mat-icon>
+                <mat-icon [style.color]="post.like" (click)="darLike(post.id)">favorite</mat-icon>
+                <mat-icon [style.color]="post.fav" (click)="hacerFav(post.id)">bookmark</mat-icon>
+                <mat-icon style="color: white;" (click)="openDialogDenuncia('0ms', '0ms', post.id)">report_problem</mat-icon>
             </mat-card-actions>
         </mat-card>
     </mat-grid-tile>
 </mat-grid-list>
+
+<mat-paginator [length]="posts.length" [pageSize]="pageSize" (page)="getPaginatorData($event)"></mat-paginator>
