--- a/src/app/components/user/sidebar/info-piso/info-piso.component.html
+++ b/src/app/components/user/sidebar/info-piso/info-piso.component.html
@@ -26,6 +26,9 @@
                 {{ respuesta.direccion }}<br>
                 {{ respuesta.habitaciones }}<br>
                 {{ respuesta.tamano }}<br>
+                <mat-divider></mat-divider>
+                {{ respuesta.descripcion }}<br>
+                <mat-divider></mat-divider>
                 <p class="precio">{{ respuesta.precio }}</p>
             </mat-card-content>
             <mat-card-actions align="end">
