--- a/src/app/components/user/sidebar/sidebar.component.html
+++ b/src/app/components/user/sidebar/sidebar.component.html
@@ -32,7 +32,7 @@
             </mat-grid-tile>
 
             <mat-grid-tile colspan="7" rowspan="2">
-                <p class="usuario">Nombre Usuario</p>
+                <p class="usuario">{{ nombreUsuario }}</p>
                 <img mat-sm-image class="insignia" src="./assets/img/badge1.png" alt="Foto de perfil">
                 <img mat-sm-image class="insignia" src="./assets/img/badge1.png" alt="Foto de perfil">
                 <img mat-sm-image class="insignia" src="./assets/img/badge1.png" alt="Foto de perfil">
