--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,31 +1,31 @@
 <div class="inicio">
-    <form>
-        <label for="email">Email:</label><br>
-        <input type="text" id="email" name="email" style="width: 100%"><br>
-        
-        <label for="password">Contraseña:</label><br>
-        <input type="password" id="password" name="password" style="width: 100%;"><br><br>
-    
-        <div class="additional-options" style="display:flex">
-          <input type="checkbox" id="remember-me" name="remember-me">
-          <label for="remember-me" margin-left="30px">Remember me</label>
-          <a href="#" class="forgot-password">Forgot password?</a>
-        </div>
-        
-        <div style="text-align: center; margin-top: 20px;">
-          <!--<input type="submit" class="rounded-button" value="Login"> -->
-          <a routerLink="/sidebar" class="rounded-button">Login</a>
-    
-          <div style="margin-top: 20px;">
-            <label>Don't have an account?</label>
-            <a routerLink="/home/register">Register</a>
-          </div>
-          
-        </div>
-    </form>
-    
-    <div class="app-name">Independízate</div>
-    <div style="position: absolute;
+  <form>
+    <label for="email">Email:</label><br>
+    <input type="text" id="email" name="email" style="width: 100%"><br>
+
+    <label for="password">Contraseña:</label><br>
+    <input type="password" id="password" name="password" style="width: 100%;"><br><br>
+
+    <div class="additional-options" style="display:flex">
+      <input type="checkbox" id="remember-me" name="remember-me">
+      <label for="remember-me" margin-left="30px">Remember me</label>
+      <a href="#" class="forgot-password">Forgot password?</a>
+    </div>
+
+    <div style="text-align: center; margin-top: 20px;">
+      <!--<input type="submit" class="rounded-button" value="Login"> -->
+      <a routerLink="/sidebar" class="rounded-button">Login</a>
+
+      <div style="margin-top: 20px;">
+        <label>Don't have an account?</label>
+        <a routerLink="/home/register">Register</a>
+      </div>
+
+    </div>
+  </form>
+
+  <div class="app-name">Independízate</div>
+  <div style="position: absolute;
             width: 50%;
             height: 100%;
             left: 0;
@@ -35,12 +35,14 @@
             justify-content: flex-end;
             align-items: center;
             background: linear-gradient(213.58deg, #01D28E 3.95%, #434982 24.82%, #434982 71.13%, #730068 93.06%);">
-    <p style="color: white; font-size: 24px; margin: 0 60px 100px 60px; text-align: justify; font-family: 'Inria Sans', sans-serif;">¿Estás considerando dar tus primeros pasos hacia la independencia? Has llegado al lugar indicado: 
-
-        Un portal diseñado para ayudarte a encontrar tu nuevo hogar ideal, compañeros de piso y mucho más.
-        Aquí encontrarás valiosos consejos de personas con experiencia, recetas sencillas, tips de limpieza, orientación sobre qué buscar en una vivienda y qué áreas son más adecuadas.
-        Únete y contribuye al crecimiento y mejora de nuestra comunidad, mientras aprendes de otros usuarios. Es un espacio para conectar, aprender y evolucionar. ¡Únete ahora mismo!</p>
-    </div>
+    <p style="color: white; font-size: 24px; margin: 0 60px 100px 60px; text-align: justify; font-family: 'Inria Sans', sans-serif;">
+      ¿Estás considerando dar tus primeros pasos hacia la independencia? Has llegado al lugar indicado:
+      Un portal diseñado para ayudarte a encontrar tu nuevo hogar ideal, compañeros de piso y mucho más.
+      Aquí encontrarás valiosos consejos de personas con experiencia, recetas sencillas, tips de limpieza, orientación
+      sobre qué buscar en una vivienda y qué áreas son más adecuadas.
+      Únete y contribuye al crecimiento y mejora de nuestra comunidad, mientras aprendes de otros usuarios. Es un
+      espacio para conectar, aprender y evolucionar. ¡Únete ahora mismo!
+    </p>
+  </div>
 
 </div>
-
