--- a/src/app/components/user/sidebar/buscar-piso/buscar-piso.component.html
+++ b/src/app/components/user/sidebar/buscar-piso/buscar-piso.component.html
@@ -13,9 +13,9 @@
             <mat-icon>search</mat-icon>
         </mat-grid-tile>
         <mat-grid-tile colspan="4">
-            <mat-form-field class="example-form-field">
+            <mat-form-field class="example-form-field" >
                 <mat-label>Buscar</mat-label>
-                <input matInput type="text" [(ngModel)]="value">
+                <input matInput type="text" [(ngModel)]="value" (ngModelChange)="buscar()">
             </mat-form-field>
         </mat-grid-tile>
     </mat-grid-list>
