--- a/src/app/components/user/sidebar/foro/conversacion/anadir-conversacion/anadir-conversacion.component.html
+++ b/src/app/components/user/sidebar/foro/conversacion/anadir-conversacion/anadir-conversacion.component.html
@@ -2,11 +2,11 @@
     <h1 class="title">Añadir un nuevo mensaje</h1>
     <form class="example-form">
         <mat-form-field class="example-full-width">
-            <textarea matInput placeholder="Mensaje"></textarea>
+            <textarea matInput placeholder="Mensaje" [(ngModel)]="mensaje" name="mensaje"></textarea>
         </mat-form-field>
     </form>
 </mat-dialog-content>
 <mat-dialog-actions align="center">
     <button mat-flat-button color="warn" style="margin-right: 3%;" [mat-dialog-close]="true">Cancelar</button>
-    <button mat-flat-button (click)="anadir()">Aceptar</button>
+    <button mat-flat-button color="primary" (click)="anadir()">Aceptar</button>
 </mat-dialog-actions>
