--- a/src/app/components/user/sidebar/foro/conversacion/conversacion.component.css
+++ b/src/app/components/user/sidebar/foro/conversacion/conversacion.component.css
@@ -3,20 +3,35 @@
     font-size: 150%;
 }
 
-.comentario {
+.info {
     margin-left: 5%;
-    margin-right: 5%;
-    margin-bottom: 1%;
-    width: 90%;
+}
+
+.post {
+    width: 95%;
     background: rgba(67, 73, 130, 0.8);
     border-radius: 10px;
+    margin-bottom: 1%;
+}
+
+.content {
+    overflow: hidden;
+    display: -webkit-box;
+    -webkit-box-orient: vertical;
+    /* -webkit-line-clamp: 4; */
+}
+
+.comentario {
+    width: 95%;
+    background: rgba(67, 73, 130, 0.8);
+    border-radius: 10px;
+    margin-bottom: 1%;
 }
 
 .comentario-tabulado {
-    margin-left: 10%;
-    margin-right: 5%;
-    margin-bottom: 1%;
     width: 85%;
     background: rgba(67, 73, 130, 0.8);
     border-radius: 10px;
+    margin-bottom: 1%;
+    margin-left: 10%;
 }
