--- a/src/app/components/user/sidebar/foro/conversacion/conversacion.component.html
+++ b/src/app/components/user/sidebar/foro/conversacion/conversacion.component.html
@@ -1,27 +1,44 @@
 <mat-grid-list cols="6" rowHeight="2:1">
     <mat-grid-tile colspan="5">
-        <p class="title">Título de la conversación</p>
+        <p class="title">{{ post.title }}</p>
     </mat-grid-tile>
     <mat-grid-tile colspan="1">
-        <mat-icon (click)="openDialogAdd('0ms', '0ms')">add</mat-icon>
+        <mat-icon (click)="openDialogAdd('0ms', '0ms', post.id)">add</mat-icon>
     </mat-grid-tile>
 </mat-grid-list>
 
-<mat-card *ngFor="let mensaje of mensajes" class="comentario" [ngClass]="{'comentario-tabulado': mensaje.tabulado}">
-    <mat-card-header>
-        <mat-card-title-group>
-            <mat-card-title style="color: white;">
-                <img mat-card-image src="/assets/img/badge1.png" alt="Foto de perfil" style="width: 3%;">
-                {{ mensaje.nombreUsuario }}
-            </mat-card-title>
-        </mat-card-title-group>
-    </mat-card-header>
-    <mat-card-content style="color: white;">{{ mensaje.comentario }}</mat-card-content>
-    <mat-card-actions align="end">
-        <mat-icon style="color: white;">keyboard_return</mat-icon>
-        <mat-icon style="color: white;">report_problem</mat-icon>
-    </mat-card-actions>
-</mat-card>
+<div class="info">
+    <mat-card class="post">
+        <mat-card-header>
+            <mat-card-title-group>
+                <mat-card-title style="color: white;">
+                    <img mat-card-image src="/assets/img/badge1.png" alt="Foto de perfil" style="width: 3%;">
+                    {{ post.userName }}
+                </mat-card-title>
+            </mat-card-title-group>
+        </mat-card-header>
+        <mat-card-content style="color: white;" class="content">{{ post.description }}</mat-card-content>
+        <mat-card-actions align="end">
+            <mat-icon style="color: white;" (click)="openDialogDenuncia('0ms', '0ms', post.id)">report_problem</mat-icon>
+        </mat-card-actions>
+    </mat-card>
 
+    <mat-card *ngFor="let mensaje of mensajes" class="comentario" [ngClass]="{'comentario-tabulado': mensaje.tabulado}">
+        <mat-card-header>
+            <mat-card-title-group>
+                <mat-card-title style="color: white;">
+                    <img mat-card-image src="/assets/img/badge1.png" alt="Foto de perfil" style="width: 3%;">
+                    {{ mensaje.userName }}
+                </mat-card-title>
+            </mat-card-title-group>
+        </mat-card-header>
+        <mat-card-content style="color: white;" class="content">{{ mensaje.description }}</mat-card-content>
+        <mat-card-actions align="end">
+            <mat-icon style="color: white;"
+                (click)="openDialogResponder('0ms', '0ms', post.id, mensaje.id)">keyboard_return</mat-icon>
+            <mat-icon style="color: white;" (click)="openDialogDenuncia('0ms', '0ms', mensaje.id)">report_problem</mat-icon>
+        </mat-card-actions>
+    </mat-card>
+</div>
 
 <!-- <button mat-raised-button (click)="openDialog('0ms', '0ms')">Open dialog without animation</button> -->
